tests/error/modInteger-wrong-1st-argument-unit.uplc
(program 1.0.0[[(builtin modInteger)(con unit ())](con integer 10)])